--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -6,7 +6,7 @@ spring:
       max-request-size: 100MB
   datasource:
     username: root
-    password: QAZlyf207
+    password: 123456
     driver-class-name: com.mysql.cj.jdbc.Driver
     url: jdbc:mysql://localhost:3306/papercut?characterEncoding=utf-8&useSSL=true&serverTimezone=GMT%2B8
     #   数据源其他配置
